# cookiecutter-pypackage

./: README.md  cookiecutter.json  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/{{cookiecutter.project_slug}}/: ok.py
tests/: test_bake_project.py  test_ok.py
{{cookiecutter.package_slug}}/: LICENSE  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
