[metadata]
name = {{ cookiecutter.package_slug }}
version = 1.0.0
description = All you need to create a Python package with Tox environments, PyTest, MyPy and Flake8.
author = Francisco Ruiz Aguilar
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    {{ cookiecutter.package_slug }}
install_requires =
    requests>=2
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
{{ cookiecutter.package_slug }} = py.typed

[flake8]
max-line-length = 160